--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ code {
   background-image: url(../../images/movie-theater-curtain-light.jpg);
   height: 200px;
   background-size: cover;
+  overflow: hidden;
 }
 
 #page-title {
